# K_Class_plugin_SC

./: CMakeLists.txt  Plot_K_Class_regionalization.py  README.md
K_Class/: CMakeLists.txt  K-Class.cpp  K-Class.h  mexican_hat.cpp  mexican_hat.h
K_Class/descriptions/: K_Class.rst  K_Class.xml
