SET(PLUGIN_TARGET K_Class)

SET(
	PLUGIN_SOURCES
		K-Class.cpp
)
SET(
	PLUGIN_HEADERS
		K-Class.h
)


SC_ADD_PLUGIN_LIBRARY(PLUGIN ${PLUGIN_TARGET} "")
SC_LINK_LIBRARIES_INTERNAL(${PLUGIN_TARGET} client)

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../base/common/libs)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/../../base/common/libs)

SET(INIT_TEMPLATE ${CMAKE_CURRENT_SOURCE_DIR}/../base/common/apps/templates/initd.py)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
set(SC3_PACKAGE_APP_DESC_DIR "${CMAKE_INSTALL_PREFIX}/etc/descriptions")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
